@@ -67,6 +67,9 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fixed a memory leak when calling net_move. net_move allocates memory for args
       and starts a thread on send_job. However, args were not getting released
       in send_job.  TRQ-1199
+  b - TRQ-1199. Fixed memory leaks found by Valgrind. Fixed a leak when routing jobs
+      to a remote server, memory leak with procct, memory leak creating queues, 
+      memory leak with mom_server_valid_message_source and a memory leak in req_track.
 
 4.1.0
   e - make free_nodes() only look at nodes in the exec_host list and not examine
